feat: migrate legacy S3 storage without workspace mounts